src/test/deca/syntax/invalid/testClassWithoutBraces1.deca
// test class without opening brace
// Result : Error
//
class C 

}
